force-app/main/default/objects/KT_Document_Request__c/KT_Document_Request__c.object-meta.xml
<CustomObject>
    <description>Document checklist item created for an onboarding record. Tracks generated and uploaded documents required for B4 Document Management and CLM.</description>
    <label>KT Document Request</label>
    <nameField>
        <displayFormat>DREQ-{000000}</displayFormat>
        <label>Document Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KT Document Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>