force-app/main/default/objects/KT_Document_Request__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Timestamp set when the document request status changes to Complete.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>