force-app/main/default/objects/KT_Document_Request__c/fields/Document_Direction__c.field-meta.xml
<CustomField>
    <fullName>Document_Direction__c</fullName>
    <description>Indicates whether KT generates the document, the onboardee uploads it, or both actions are required.</description>
    <label>Document Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
                <default>true</default>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>