force-app/main/default/objects/KT_Document_Request__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template that must be generated or collected for this document request.</description>
    <label>Document Template</label>
    <referenceTo>KT_DocumentTemplate__c</referenceTo>
    <relationshipLabel>Document Requests</relationshipLabel>
    <relationshipName>DocumentRequests</relationshipName>
    <type>Lookup</type>
</CustomField>