force-app/main/default/objects/KT_Document_Request__c/fields/Document_Vault_Entry__c.field-meta.xml
<CustomField>
    <fullName>Document_Vault_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Actual stored document entry once this request is complete.</description>
    <label>Document Vault Entry</label>
    <referenceTo>KT_DocumentVault__c</referenceTo>
    <relationshipLabel>Document Requests</relationshipLabel>
    <relationshipName>DocumentRequests</relationshipName>
    <type>Lookup</type>
</CustomField>