force-app/main/default/objects/KT_Document_Request__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due date calculated from domain and persona SLA. Used by reminder automation and overdue detection.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>