force-app/main/default/objects/KT_Document_Request__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this document must be complete before journey stage progression.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>