force-app/main/default/objects/KT_Document_Request__c/fields/KT_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>KT_Onboarding__c</fullName>
    <description>Parent onboarding record. Cascade delete removes document checklist items with the onboarding record.</description>
    <label>KT Onboarding</label>
    <referenceTo>KT_Onboarding__c</referenceTo>
    <relationshipLabel>Document Requests</relationshipLabel>
    <relationshipName>DocumentRequests</relationshipName>
    <type>MasterDetail</type>
</CustomField>