force-app/main/default/objects/KT_Document_Request__c/fields/Reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of reminders sent. Incremented by scheduled reminder automation for throttling.</description>
    <label>Reminder Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>