force-app/main/default/objects/KT_Document_Request__c/fields/Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Reason__c</fullName>
    <description>HR justification when a required document is waived. Intended to be immutable once set by automation or validation.</description>
    <label>Waiver Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>